SERVER-14747 fix memory leak in MultiPlanStage